tests/Rules/Aria/Fixtures/invalid/aria_multiple_attrs_not_allowed.html.twig
{# 2 errors #}
<div role="button" aria-checked="true" aria-selected="true"></div>
